--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
-    "react-vertical-timeline-component": "^3.5.3",
-    "tailwind-merge": "^3.0.1"
+    "react-vertical-timeline-component": "^3.5.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
